tests/data/placebo/test_ec2_security_group_filter/ec2.CreateSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "GroupId": "sg-12eeb66f", 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "138b38ef-2737-4990-aa55-7f56c61fdbd7", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:12 GMT"
            }
        }
    }
}
