tests/data/placebo/test_ec2_security_group_filter/ec2.CreateSubnet_1.json
{
    "status_code": 200, 
    "data": {
        "Subnet": {
            "VpcId": "vpc-29e0314f", 
            "CidrBlock": "10.42.0.0/24", 
            "State": "pending", 
            "AvailabilityZone": "us-east-1e", 
            "SubnetId": "subnet-b9248885", 
            "AvailableIpAddressCount": 251
        }, 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "fa00bc50-dde1-4f2e-9c54-0498fd023e0c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:12 GMT"
            }
        }
    }
}
