tests/data/placebo/test_ec2_security_group_filter/ec2.DeleteVpc_1.json
{
    "status_code": 400, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 400, 
            "RequestId": "36a644d5-b9a6-42e9-ac31-21a3cb2efe76", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "date": "Mon, 12 Dec 2016 16:11:17 GMT", 
                "connection": "close", 
                "server": "AmazonEC2"
            }
        }, 
        "Error": {
            "Message": "The vpc 'vpc-29e0314f' has dependencies and cannot be deleted.", 
            "Code": "DependencyViolation"
        }
    }
}
