tests/data/placebo/test_ec2_security_group_filter/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "launch-wizard-1 created 2016-10-11T08:37:50.939-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "GroupName": "launch-wizard-1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-926a56e8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "for production use only", 
                "IpPermissions": [], 
                "GroupName": "CUSTODIAN-PROD-ONLY-WEB-SG", 
                "VpcId": "vpc-29e0314f", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-12eeb66f"
            }
        ], 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "a1663ced-8065-4f12-b77a-add7da28d8c1", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:15 GMT"
            }
        }
    }
}
