tests/data/placebo/test_ec2_security_group_filter/ec2.DescribeTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "e4ec9c96-5f3d-473a-ae97-5a85e6162782", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:15 GMT"
            }
        }, 
        "Tags": [
            {
                "ResourceType": "instance", 
                "ResourceId": "i-0d6fc89a578546fec", 
                "Value": "BalancedInstance", 
                "Key": "Name"
            }
        ]
    }
}
