tests/data/placebo/test_ec2_security_group_filter/ec2.RunInstances_2.json
{
    "status_code": 200, 
    "data": {
        "OwnerId": "644160558196", 
        "ReservationId": "r-0252cb29acb8652a1", 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "f9e017fd-bbd4-4638-bdc4-88e598cef45c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:14 GMT"
            }
        }, 
        "Groups": [], 
        "Instances": [
            {
                "Monitoring": {
                    "State": "disabled"
                }, 
                "PublicDnsName": "", 
                "RootDeviceType": "ebs", 
                "State": {
                    "Code": 0, 
                    "Name": "pending"
                }, 
                "EbsOptimized": false, 
                "LaunchTime": {
                    "hour": 16, 
                    "__class__": "datetime", 
                    "month": 12, 
                    "second": 15, 
                    "microsecond": 0, 
                    "year": 2016, 
                    "day": 12, 
                    "minute": 11
                }, 
                "PrivateIpAddress": "10.42.0.109", 
                "ProductCodes": [], 
                "VpcId": "vpc-29e0314f", 
                "StateTransitionReason": "", 
                "InstanceId": "i-0953af833b8445f78", 
                "ImageId": "ami-b73b63a0", 
                "PrivateDnsName": "ip-10-42-0-109.ec2.internal", 
                "SecurityGroups": [
                    {
                        "GroupName": "CUSTODIAN-PROD-ONLY-WEB-SG", 
                        "GroupId": "sg-12eeb66f"
                    }
                ], 
                "ClientToken": "", 
                "SubnetId": "subnet-b9248885", 
                "InstanceType": "t2.micro", 
                "NetworkInterfaces": [
                    {
                        "Status": "in-use", 
                        "MacAddress": "06:14:91:e3:93:64", 
                        "SourceDestCheck": true, 
                        "VpcId": "vpc-29e0314f", 
                        "Description": "", 
                        "NetworkInterfaceId": "eni-afaf4747", 
                        "PrivateIpAddresses": [
                            {
                                "Primary": true, 
                                "PrivateIpAddress": "10.42.0.109"
                            }
                        ], 
                        "Attachment": {
                            "Status": "attaching", 
                            "DeviceIndex": 0, 
                            "DeleteOnTermination": true, 
                            "AttachmentId": "eni-attach-27c37edc", 
                            "AttachTime": {
                                "hour": 16, 
                                "__class__": "datetime", 
                                "month": 12, 
                                "second": 15, 
                                "microsecond": 0, 
                                "year": 2016, 
                                "day": 12, 
                                "minute": 11
                            }
                        }, 
                        "Groups": [
                            {
                                "GroupName": "CUSTODIAN-PROD-ONLY-WEB-SG", 
                                "GroupId": "sg-12eeb66f"
                            }
                        ], 
                        "SubnetId": "subnet-b9248885", 
                        "OwnerId": "644160558196", 
                        "PrivateIpAddress": "10.42.0.109"
                    }
                ], 
                "SourceDestCheck": true, 
                "Placement": {
                    "Tenancy": "default", 
                    "GroupName": "", 
                    "AvailabilityZone": "us-east-1e"
                }, 
                "Hypervisor": "xen", 
                "BlockDeviceMappings": [], 
                "Architecture": "x86_64", 
                "StateReason": {
                    "Message": "pending", 
                    "Code": "pending"
                }, 
                "RootDeviceName": "/dev/xvda", 
                "VirtualizationType": "hvm", 
                "AmiLaunchIndex": 0
            }
        ]
    }
}
