tests/data/placebo/test_ec2_security_group_filter/ec2.TerminateInstances_1.json
{
    "status_code": 200, 
    "data": {
        "TerminatingInstances": [
            {
                "InstanceId": "i-0d47fbae2afb76ea2", 
                "CurrentState": {
                    "Code": 32, 
                    "Name": "shutting-down"
                }, 
                "PreviousState": {
                    "Code": 0, 
                    "Name": "pending"
                }
            }, 
            {
                "InstanceId": "i-0953af833b8445f78", 
                "CurrentState": {
                    "Code": 32, 
                    "Name": "shutting-down"
                }, 
                "PreviousState": {
                    "Code": 0, 
                    "Name": "pending"
                }
            }
        ], 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "f26c8212-0b17-48e0-a872-17caf9762dfc", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 12 Dec 2016 16:11:16 GMT"
            }
        }
    }
}
